# voicewm

./: .gitignore  Cargo.toml  README.md  config.toml  install.sh
src/: audio.rs  command.rs  config.rs  main.rs  vosk_engine.rs
